# tic-tac-toe

./: LICENSE  README.md  mypy.ini  pyproject.toml
constants/: constants.py
src/: game_loop.py  main.py
src/models/: board.py
src/ui/: prompts.py
src/utils/: colorize.py  grey.py
tests/models/: test_board.py
tests/utils/: test_colorize.py  test_grey.py
